# AGH-SO-Systemy-operacyjne-2017

./: .directory  .gitignore  README.md  Readme.md  tipy
cw01 - wstęp i biblioteki/task1/: CMakeLists.txt  carray.c
cw01 - wstęp i biblioteki/task2/: data.c  data.h
cw01 - wstęp i biblioteki/task3/a/: results3a.txt
cw01 - wstęp i biblioteki/task3/b/: CMakeLists.txt
cw01/task1/: CMakeCache.txt  Makefile  install_manifest.txt
cw01/task2/: CMakeCache.txt  cmake_install.cmake
cw01/task3/a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cw01/task3/b/: Makefile
cw02 - pliki/task1/: CMakeLists.txt  CTestTestfile.cmake  fileLib.c  fileLib.h  task.c
cw02 - pliki/task1/tests/: systemResults.txt  testRandomFileLib  testRandomFileLib2  testRandomFileSystem  testRandomFileSystem2
cw02 - pliki/task2/: task.c
cw02/task1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fileLib.c  fileLib.h.gch  testRandomFileSystem
cw02/task1/Testing/Temporary/: CTestCostData.txt
cw02/task1/tests/: libResults.txt  systemResults.txt  testRandomFileLib  testRandomFileLib2  testRandomFileSystem  testRandomFileSystem2
cw02/task2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  task.c
cw03 - procesy/task2/: polecenia.txt
cw03 - procesy/task3/: task.c
cw03/task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cw03/task2/: CMakeCache.txt  Makefile  cmake_install.cmake
cw03/task3/: CMakeCache.txt  Makefile  cmake_install.cmake  polecenia.txt
cw04 - sygnały/task1/b/: task.c
cw04 - sygnały/task2/: task.c
cw04/task1/a/: CMakeCache.txt  Makefile  cmake_install.cmake
cw04/task1/b/: CMakeCache.txt  Makefile  cmake_install.cmake
cw04/task2/: CMakeCache.txt  Makefile  cmake_install.cmake  task.c
cw04/task3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cw05 - potoki/task1/: CMakeLists.txt  polecenia.txt
cw05 - potoki/task2/: slave.c
cw05/task1/: CMakeCache.txt  Makefile  cmake_install.cmake  task.c
cw05/task2/: CMakeLists.txt  master.c
cw06 - kolejki/task1/src/: client.c  client_server.h
cw06/task1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cw06/task1/src/: client.c  client_server.h  client_server.h.gch  server.c
cw06/task2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cw06/task2/src/: client.c  client_server.h  client_server.h.gch  server.c
cw07 - semafory i smh/task1/: CMakeLists.txt
cw07 - semafory i smh/task1/src/: barber.c  clients.c
cw07 - semafory i smh/task2/: CMakeLists.txt
cw07 - semafory i smh/task2/src/: barber.c  client_server.h  client_server.h.gch  clients.c
cw07/task1/src/: barber.c  client_server.h  client_server.h.gch  clients.c
cw07/task2/src/: client_server.h
cw08 - wątki/task1/: CMakeLists.txt  out.pgm
cw08 - wątki/task1/data/: filtr1  galaxy
cw08 - wątki/task1/src/: task.c
cw09 - mutexy/task1/: run.sh
cw09 - mutexy/task1/src/: task.c
cw09 - mutexy/task2/: CMakeLists.txt
cw09 - mutexy/task2/src/: task.c
cw10 - sockety/task1/: CMakeLists.txt
cw10 - sockety/task2/src/: server.c
lab1/task1/: CMakeCache.txt  CMakeLists.txt  Makefile  carray.c  carray.h  carray.h.gch  cmake_install.cmake  install_manifest.txt  libstat.h.gch
lab1/task2/: CMakeLists.txt  Makefile  cmake_install.cmake  data.c  data.h  data.h.gch  program  raport2.txt  task2.c
lab1/task3/a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  results3a.txt
lab1/task3/b/: CMakeCache.txt  cmake_install.cmake  results3b.txt
pakupaku/RzoncaKonrad/cw03/task1/: task.c
pakupaku/RzoncaKonrad/cw03/task2/: task.c
pakupaku/RzoncaKonrad/cw03/task3/: CMakeLists.txt  polecenia.txt  task.c
pakupaku/RzoncaKonrad/cw04/task1/a/: task.c
pakupaku/RzoncaKonrad/cw04/task2/: CMakeLists.txt
pakupaku/RzoncaKonrad/cw04/task3/: task.c
pakupaku/RzoncaKonrad/cw06/task1/src/: server.c
pakupaku/RzoncaKonrad/cw06/task2/src/: client.c
pakupaku/RzoncaKonrad/cw07/task1/src/: client_server.h
pakupaku/RzoncaKonrad/cw07/task2/src/: barber.c  client_server.h.gch
pakupaku/RzoncaKonrad/cw10 - sockety/task1/src/: client.c  server.c
pakupaku/RzoncaKonrad/cw10 - sockety/task2/src/: client.c  client_server.h
pakupaku/cw08/task1/data/: filtr1
pakupaku/cw08/task1/src/: task.c
